bootstrap/ocp/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${USER_NS}
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${USER_NS}-terminal
