bootstrap/ocp/np-egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-gw-to-mesh-external
spec:
  podSelector:
    matchLabels:
      app: ratings
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: istio-egressgateway
          namespaceSelector: {}
  policyTypes:
    - Ingress
